# evals

oversight-eval/: README.md  analysis.py  dataset.json  oversight_eval.py  pyproject.toml  scorers.py
sandbagging-eval/: README.md  analysis.py  dataset.json  sandbagging_eval.py
sycophancy-eval/: README.md  analysis.py  dataset.json  scorers.py  sycophancy_eval.py
